--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -157,7 +157,7 @@ The biophysical environment, defined here to include the physical structure of t
 In this section, we supplement a review of the existing literature with a new analysis of data on vegetation structure and vertical microclimate profiles from focal sites within the U.S. National Ecological Observatory Network (NEON; Fig. `r fig_NEON_vertical`, Supporting Information Methods `r appendix_NEON_methods`, Supporting Information Figure `r SIfig_NEON_all`).
 While the focus here is on vertical gradients, it is important to note that in heterogeneous canopies with high gap fractions and large variation in tree height, or at forest edges, the biophysical environment can be more closely linked to the distance from the outer canopy than to height [@lowmanForestCanopies1995]. 
 
-![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six US forest sites in the National Ecological Observatory Network (NEON)**. Height profiles are shown for: growing season (a) modelled leaf area density, (b) calculated proportion of sun leaves, and (c) proportion light incident to the top of the canopy (as fraction relative to to top of canopy), and for July mean ± 1 standard deviation for (d) maximum photosynthetically active radiation (PAR), (e) maximum wind speed, (f) minimum humidity (min RH), (g) maximum air temperature ($T_{air}$), and (h) maximum biological temperature, ($T_{bio}$). Measurements extend from ground level (height = 0 m) to the top of the canopy (a-c, h) or above (d-g). Sites, which represent a variety of forest structures, include a mixed northern hardwood forest (Harvard Forest, MA; HARV), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), a tropical montane broadleaf evergreen forest (Pu'u Maka'ala Natural Area Reserve, Hawai'i; PUUM), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a coniferous forest (Wind River Experimental Forests, WA; WREF). Further site information is given in Supporting Information Table `r NEON_sites`, and analysis details in Supporting Information Methods `r appendix_NEON_methods`. Vertical profiles in micrometeorological variables (d-h) at all six NEON sites are shown in Supporting Information Figure `r SIfig_NEON_all`.](NEON_height_profiles/figures/Fig2_normalized.png)
+![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six US forest sites in the National Ecological Observatory Network (NEON)**. Height profiles, normalized relative to the top of the canopy, are shown for: growing season (a) modelled leaf area density, (b) calculated proportion of sun leaves, and (c) proportion light incident to the top of the canopy (as fraction relative to to top of canopy), and for July mean ± 1 standard deviation for (d) maximum photosynthetically active radiation (PAR), (e) maximum wind speed, (f) minimum humidity (min RH), (g) maximum air temperature ($T_{air}$), and (h) maximum biological temperature, ($T_{bio}$). Measurements extend from ground level (normalized height = 0 m) to the top of the canopy (horizontal dashed line at normalized height = 1) or above (d-g). Sites, which represent a variety of forest structures, include a mixed northern hardwood forest (Harvard Forest, MA; HARV), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), a tropical montane broadleaf evergreen forest (Pu'u Maka'ala Natural Area Reserve, Hawai'i; PUUM), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a coniferous forest (Wind River Experimental Forests, WA; WREF). Further site information is given in Supporting Information Table `r NEON_sites`, and analysis details in Supporting Information Methods `r appendix_NEON_methods`. Vertical profiles in micrometeorological variables (d-h) at all forested NEON sites are shown in Supporting Information Figure `r SIfig_NEON_all`.](NEON_height_profiles/figures/Fig2_normalized.png)
 
 Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions from large fluctuations in conditions experienced above the canopy. It is critical in influencing -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).
 Leaf area density (*i.e.*, leaf area per unit volume) patterns along the vertical gradient are heterogeneous across forests (Fig. `r fig_NEON_vertical`a-b, Supporting Information Figure `r SIfig_NEON_all`). 
@@ -173,7 +173,14 @@ Mid-canopies and understories experience a highly dynamic light environment due 
 This light gradient is more pronounced in dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than in open canopy forests, including many conifer forests [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @smithSeasonalDroughtrelatedChanges2019; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
 The implications of this light gradient are that leaf traits vary along the vertical gradient [Table 1], and that upper canopy leaves have higher potential photosynthetic rate (see section 4.2), but also greater propensity towards elevated $T_{leaf}$ (see sections 2.2, 4.2).
 
-Steep vertical profiles of wind speed, water vapor, CO~2~ and temperature might also occur within canopies, but are more difficult to predict and to generalize on the basis of theoretical first principles than are radiation profiles. Vertical transport at the macroscopic scale of a plant canopy is dominated by turbulent transport rather than by molecular diffusion. Above the canopy, turbulent transport typically mimics diffusion – that is, vertical fluxes of heat, mass and momentum are proportional to their respective vertical gradients, and to transfer coefficients (eddy diffusivities, often symbolized K) that depend on both friction and buoyancy [@penmanWeatherWheatEssay1960]. In this “K-theory” regime, wind speed declines logarithmically with proximity to the ground or canopy surface [@monteithPrinciplesEnvironmentalPhysics2013]. Interaction with a plant canopy also attenuates wind, causing wind speed to decline through the canopy; for example, small plant elements can rapidly dissipate momentum within dense canopies [e.g., @raupachAveragingProceduresFlow1982; @baldocchiSpectralLagcorrelationAnalysis1988]. However, K-theory often fails within canopies, making canopy wind profiles difficult to generalize from first principles [e.g., @denmeadScalarTransportPlant1987; @RaupachM.R1989Ttip; @meyersModellingPlantCanopy1987; @katulModelingCO2Sources1999; @harmanSimpleUnifiedTheory2007]. For example, in the lower canopy, wind speed may decrease with height despite net downward momentum flux [@shawSecondaryWindSpeed1977], and temperature may increase with height despite upward sensible heat flux [e.g., @raupachLagrangianAnalysisScalar1987]. Such counter-gradient transport may arise from the intermittent generation, at the canopy surface, of large wakes or coherent eddy structures that periodically dip down through the canopy, gathering packets of warmed, humidified and CO~2~-enriched or –depleted air from beneath and within the canopy and flushing them to the atmosphere above [@finniganTurbulenceWavingWheat1979; @baldocchiTraceGasExchange1991]. These "sweep-eject" events can couple understory conditions more directly to conditions above the canopy than beneath. 
+Steep vertical profiles of wind speed, water vapor, CO~2~ and temperature might also occur within canopies, but are more difficult to predict and to generalize on the basis of theoretical first principles than are radiation profiles. 
+Vertical transport at the macroscopic scale of a plant canopy is dominated by turbulent transport rather than by molecular diffusion. 
+Above the canopy, turbulent transport typically mimics diffusion – that is, vertical fluxes of heat, mass and momentum are proportional to their respective vertical gradients, and to transfer coefficients (eddy diffusivities, often symbolized K) that depend on both friction and buoyancy [@penmanWeatherWheatEssay1960]. 
+In this “K-theory” regime, wind speed declines logarithmically with proximity to the ground or canopy surface [@monteithPrinciplesEnvironmentalPhysics2013]. Interaction with a plant canopy also attenuates wind, causing wind speed to decline through the canopy; for example, small plant elements can rapidly dissipate momentum within dense canopies [e.g., @raupachAveragingProceduresFlow1982; @baldocchiSpectralLagcorrelationAnalysis1988].
+However, K-theory often fails within canopies, making canopy wind profiles difficult to generalize from first principles [e.g., @denmeadScalarTransportPlant1987; @RaupachM.R1989Ttip; @meyersModellingPlantCanopy1987; @katulModelingCO2Sources1999; @harmanSimpleUnifiedTheory2007].
+For example, in the lower canopy, wind speed may decrease with height despite net downward momentum flux [@shawSecondaryWindSpeed1977], and temperature may increase with height despite upward sensible heat flux [e.g., @raupachLagrangianAnalysisScalar1987].
+Such counter-gradient transport may arise from the intermittent generation, at the canopy surface, of large wakes or coherent eddy structures that periodically dip down through the canopy, gathering packets of warmed, humidified and CO~2~-enriched or –depleted air from beneath and within the canopy and flushing them to the atmosphere above [@finniganTurbulenceWavingWheat1979; @baldocchiTraceGasExchange1991]. 
+These "sweep-eject" events can couple understory conditions more directly to conditions above the canopy than beneath. 
 
 Despite these complexities of within-canopy transport, wind speeds are generally much higher at the top of the canopy than within or beneath [@juckerCanopyStructureTopography2018; @jiao-junWindProfilesTrees2004].
 This holds true across the range of forest types [Fig. `r fig_NEON_vertical`e, Supporting Information Figure `r SIfig_NEON_all`, @barnardSeasonalVariationCanopy2016; @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021; @hanberryOpenForestEcosystems2020; @hanberryReconceptualizationOpenOak2018] and savannas [@curtis_intracanopy_2019;@johnstonWhatLiesVertical2020]. 
@@ -181,7 +188,10 @@ Specifically, averaged across the NEON sites, maximum daily wind speeds were 4.1
 The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for exchange of both mass and sensible heat (see sections 2.2, 4.1).
 
 Atmospheric concentrations of carbon dioxide (CO~2~) and water vapor can also vary across the vertical gradient.
-Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. Vertical CO~2~ concentration gradients can influence the ratio of leaf inter-cellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$), and refixation of respired CO~2~ vertically, where both tend to be higher in the lower canopy positions (Table 1). Particularly, understory seedlings above ground benefit from elevated CO~2~ by having highest rates of CO~2~ refixation [@brooksVerticalGradientsPhotosynthetic1997]. However, given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
+Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. 
+Vertical CO~2~ concentration gradients can influence the ratio of leaf inter-cellular CO~2~ to ambient CO~2~ ($c_{i}/c_{a}$), and refixation of respired CO~2~ vertically, where both tend to be higher in the lower canopy positions (Table 1). 
+Particularly, understory seedlings above ground benefit from elevated CO~2~ by having highest rates of CO~2~ refixation [@brooksVerticalGradientsPhotosynthetic1997]. 
+However, given that differences are negligible for most of the day when photosynthesis is occurring, gradients in CO~2~ concentrations are unlikely to significantly affect the energy balance and metabolism of leaves across the forest vertical gradient.
  
 Relative humidity (RH) tends to be higher in the understory and decreases with height, although this trend is absent in open forests [Fig. `r fig_NEON_vertical`f, Supporting Information Figure `r SIfig_NEON_all`, e.g., @juckerCanopyStructureTopography2018; @mcgregorTreeHeightLeaf2021; @binLeafTraitExpression2022].
 Dense-canopy forests maintain higher daily maximum RH in the understory than open forests and nearby open areas, an effect that is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020]. 
@@ -290,8 +300,13 @@ Sun leaves have higher concentrations (per unit area) of elements such as nitrog
 Increases in chlorophyll a/b ratios with height reflect the greater light availability in the upper canopy, while greater chlorophyll concentrations at lower heights within the canopy give shade leaves greater PAR absorptance efficiency (Table `r table_leaf_traits`).
 Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure in sun exposed canopies (see section 4, Table `r table_leaf_metabolism`) compared to shaded lower canopies, result in lower intercellular CO~2~ concentrations and higher $\delta^{13}$C isotopic ratios in leaf tissues (Table `r table_leaf_traits`).
 
-Biochemical protection against foliage light and heat damage also increases with irradiance, and thus tends to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). 
-Carotenoids (e.g., beta carotene and lutein), including xanthophyll cycle pigments (i.e., violaxanthin, antheraxanthin and zeaxanthin, VAZ), can play a role in antioxidant scavenging and harmlessly dissipating excess excitation energy as heat to reduce photoinhibition, and therefore also serve as thermoprotection and postpone heat damage [@niinemetsPhotosynthesisResourceDistribution2007; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. With saturating irradiance in canopy leaves, unused energy from photosystem II antennae is further dissipated as heat energy through non-photochemical quenching (NPQ) [@mathurPhotosyntheticEfficiencySun2018b]. Efficient light-use is optimized through this process while preventing the accumulation of excess light, an energetic imbalance that results in the generation of harmful reactive oxygen  species (ROS). However, below a photon flux density (PPFD) of $200\mu molm^{-2}s^{-1}$, within a beech canopy (*Fagus sylvatica L.*), shaded lower canopy leaves have been observed to have higher NPQ rates than upper canopy leaves, reflecting rapid photosynthetic induction kinetics in shaded leaves as an acclimation to sunflecks. Beyond this PPFD threshold, NPQ rates of upper canopy increase with an increase in light intensity [@scartazzaInvestigatingEuropeanBeech2016a]. The dissipation of excess light energy is also important for leaf acclimation to higher temperatures if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@havauxTemperaturedependentAdjustmentThermal1996]. 
+Biochemical protection against foliage light and heat damage increase with peak radiation loads, and thus tend to be higher in the upper canopy than in the understory (Table `r table_leaf_traits`). 
+Carotenoids (e.g., beta carotene and lutein), including xanthophyll cycle pigments (i.e., violaxanthin, antheraxanthin and zeaxanthin, VAZ), can play a role in antioxidant scavenging and harmlessly dissipating excess excitation energy as heat to reduce photoinhibition, and therefore also serve as thermoprotection and postpone heat damage [@niinemetsPhotosynthesisResourceDistribution2007; @mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. 
+With saturating irradiance in canopy leaves, unused energy from photosystem II antennae is further dissipated as heat energy through non-photochemical quenching[@mathurPhotosyntheticEfficiencySun2018b]. 
+Efficient light-use is optimized through this process while preventing the accumulation of excess light, an energetic imbalance that results in the generation of harmful reactive oxygen species. 
+However, below a photon flux density of $200\mu molm^{-2}s^{-1}$, within a beech canopy (*Fagus sylvatica L.*), shaded lower canopy leaves have been observed to have higher non-photochemical quenching rates than upper canopy leaves, reflecting rapid photosynthetic induction kinetics in shaded leaves as an acclimation to sunflecks. 
+Beyond this photon flux density threshold, non-photochemical quenching rates of upper canopy increase with an increase in light intensity [@scartazzaInvestigatingEuropeanBeech2016a]. 
+The dissipation of excess light energy is also important for leaf acclimation to higher temperatures if high $T_{leaf}$ impairs the photochemical energy dissipation pathway [@havauxTemperaturedependentAdjustmentThermal1996]. 
 
 Capacity for heat-sensitive, light-dependent (photosynthetically linked) emissions of volatile organic compounds (VOCs), including isoprene and monoterpenes, enhances photosynthetic thermal tolerance by regulating antioxidant defenses and other metabolic processes [@sharkeyIsopreneEmissionPlants2008; @taylorCapacityEmitIsoprene2019; @monsonLeafIsopreneEmission2021; @vickersUnifiedMechanismAction2009; @copoloviciCapacityThermalProtection2005; @riedlmeierMonoterpenesSupportSystemic2017]. 
 Less than half of tree species express significant light-dependent emissions [@kesselmeierBiogenicVolatileOrganic; @taylorIsopreneEmissionStructures2018], such that variation in emissions across the vertical profile can be influenced both by vertical variation in species compositions and plasticity in emission rate capacities [see section 4.4, @taylorNewFieldInstrument2021].
@@ -506,7 +521,8 @@ When the canopy trees die, this will open canopy gaps, as discussed in the follo
 ### Canopy disturbance
 
 As discussed above, rising temperatures and severe droughts place the canopy trees at particularly elevated risk of mortality. 
-Moreover, large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting,  @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change[@ipccClimateChange20212021], and they are also targeted by selective logging operations [e.g., @millerReducedImpactLogging2011]. Increase in the severity and frequency of heat waves, accompanied with an increase in VPD and ET, can rapidly dry soils up, exacerbating effects of drought on predominantly canopy trees, potentially causing large scale canopy die-back [@matusickSuddenForestCanopy2013; @teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities2021].
+Moreover, large trees are also disproportionately impacted by other climate-related disturbances [e.g., wind, lighting,  @goraImplicationsSizedependentTree2021] that are expected to intensify with climate change[@ipccClimateChange20212021], and they are also targeted by selective logging operations [e.g., @millerReducedImpactLogging2011]. 
+Increase in the severity and frequency of heat waves, accompanied with an increase in VPD and ET, can exacerbate effects of drought on predominantly canopy trees, potentially causing large scale canopy die-back [@matusickSuddenForestCanopy2013; @teskeyResponsesTreeSpecies2015; @breshearsUnderappreciatedPlantVulnerabilities2021].
 Forest fragmentation also disproportionately kills large trees by making them more vulnerable to wind, desiccation, and liana infestation [@lauranceRainForestFragmentation2006].
 Thus, canopies are becoming increasingly prone to disturbance and gap formation, which in turn increases incident radiation levels and temperatures within the canopy [@starkReframingTropicalSavannization2020]. 
 While wetter forests can prove quite resilient to such changes [@millerReducedImpactLogging2011], this shift to hotter and drier microclimates can often make forests more susceptible to further disturbances, for example, increasing fire risk [@brandoAbruptIncreasesAmazonian2014; @aragao21stCenturyDroughtrelated2018]. 
